# rush-ticketing

./: .gitignore  README.md  docker
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  database.py  kafka.py  main.py  models.py  redis_keys.py
backend/app/lua/: hold_seat.lua
backend/app/routes/: auth.py  queue.py  reservation.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 307be54d2856_create_train_seat_user_reservation_.py  75aab94d32da_add_code_field_to_trains.py  b9a6142a611e_add_username_and_password_hash_to_users.py  e3c5b5893dc7_add_auth_fields_and_hold_token.py
backend/notifier/: main.py
backend/scheduler/: main.py
backend/scripts/: seed.py
backend/worker/: main.py
frontend/: index.html
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/auth/: AuthContext.jsx  ProtectedRoute.jsx
frontend/src/pages/: ConfirmationPage.jsx  HomePage.jsx  LoginPage.jsx  MyReservationPage.jsx  PaymentPage.jsx  SeatSelectionPage.jsx  SignupPage.jsx  WaitingPage.jsx
frontend/src/styles/: global.css  tokens.css
infra/: docker-compose.yml
k6/: join_test.js
